--- a/templates/student_detail_view.html
+++ b/templates/student_detail_view.html
@@ -218,3 +218,9 @@
         </div>
    </div>
 {% endblock %}
+
+{% block common_list_sublevel %}
+    <div class="sidebar-element" style="background-color: #8b9dc3">
+        Просмотр персоны
+    </div>
+{% endblock %}
