--- a/cspcapp/static/base.css
+++ b/cspcapp/static/base.css
@@ -39,8 +39,11 @@ body {
   font-size: 20px;
   color: whitesmoke;
   display: block;
-    background-color: red;
     height: 90px;
+    border-bottom: 2px;
+    border-top: 2px;
+    border-bottom-color: white;
+    border-top-color: white;
 }
 
 .login-info div {
@@ -54,6 +57,6 @@ body {
   font-size: 20px;
   color: whitesmoke;
   display: block;
-    background-color: black;
+    /*background-color: black;*/
 }
 
