add login require to all pages

--- a/templates/student_detail_view.html
+++ b/templates/student_detail_view.html
@@ -111,14 +111,20 @@
                         <div style="display: inline-block; width: 98%;">
                             {{ contract.student_document.authority_txt }}
                         </div>
-                        <div style="display: inline-block; width: 33%;">
+                        <div style="display: inline-block; width: 23%;">
                             {{ contract.student_document.document_type_txt }}
                         </div>
-                        <div style="display: inline-block; width: 30%;">
+                        <div style="display: inline-block; width: 23%;">
                             {{ contract.student_document.authority_no }}
                         </div>
-                        <div style="display: inline-block; width: 33%;">
+                        <div style="display: inline-block; width: 23%;">
                             {{ contract.student_document.issue_dt }}
+                        </div>
+                        <div style="display: inline-block; width: 30px;">
+                            {{ contract.student_document.document_series }}
+                        </div>
+                        <div style="display: inline-block; width: 80px;">
+                            {{ contract.student_document.document_no }}
                         </div>
                     </div>
 
@@ -157,14 +163,20 @@
                         <div style="display: inline-block; width: 98%;">
                             {{ contract.payer_document.authority_txt }}
                         </div>
-                        <div style="display: inline-block; width: 33%;">
+                        <div style="display: inline-block; width: 23%;">
                             {{ contract.payer_document.document_type_txt }}
                         </div>
-                        <div style="display: inline-block; width: 30%;">
+                        <div style="display: inline-block; width: 23%;">
                             {{ contract.payer_document.authority_no }}
                         </div>
-                        <div style="display: inline-block; width: 33%;">
+                        <div style="display: inline-block; width: 23%;">
                             {{ contract.payer_document.issue_dt }}
+                        </div>
+                        <div style="display: inline-block; width: 30px;">
+                            {{ contract.payer_document.document_series }}
+                        </div>
+                        <div style="display: inline-block; width: 80px;">
+                            {{ contract.payer_document.document_no }}
                         </div>
                     </div>
 
