--- a/templates/base.html
+++ b/templates/base.html
@@ -29,11 +29,16 @@
     </div>
     {% block common_list_sublevel %}
     {% endblock %}
+    <div class="sidebar-element">
+        <a href="/courses/">Список курсов</a>
+    </div>
+    <div class="sidebar-element">
+        <a href="/teachers/">Список учителей</a>
+    </div>
+    <div class="sidebar-element">
+        <a href="/">Утилиты</a>
+    </div>
 
-    <a href="#">About</a>
-    <a href="#">Services</a>
-    <a href="#">Clients</a>
-    <a href="#">Contact</a>
 </div>
 
 <div class="window-content">
